--- a/Rich-list node server/public/css/credentials.css
+++ b/Rich-list node server/public/css/credentials.css
@@ -2,6 +2,8 @@ body {
     background-image: url("/static/images/middel2.png");
     background-size: cover;
     background-position: center;
+    font-family: 'Roboto',  sans-serif;
+
 }
 
 .wrapper {
