--- a/Rich-list node server/public/css/admin-dashboard.css
+++ b/Rich-list node server/public/css/admin-dashboard.css
@@ -6,8 +6,13 @@
     height: 100vh;
 }
 .blue {
-    color: #007bff;
+    color: #007bff !important;
 }
+
+.default-grey {
+    color: #a0a0a0;
+}
+
 /* .welcome-message {
     color: #ffffff;
     background: #ff2e63;
