Upgraded the home page :100:

--- a/Rich-list node server/public/css/credentials.css
+++ b/Rich-list node server/public/css/credentials.css
@@ -3,7 +3,6 @@ body {
     background-size: cover;
     background-position: center;
     font-family: 'Roboto',  sans-serif;
-
 }
 
 .wrapper {
@@ -14,7 +13,6 @@ body {
     color: #252525;
     border: 1px solid #d4d4d4;
     border-radius: 5px;
-
 }
 
 .btn-primary {
@@ -22,11 +20,17 @@ body {
     border-color: #ff2e63;
 }
 
+.btn-primary-admin {
+    background-color: #252a34 !important;
+    border-color: #252a34 !important;
+    color: white !important;
+}
+
 .logo-image {
     margin: auto;
     display: flex;
-    width: 159px;
-    padding-bottom: 50px;
+    width: 210px;
+    padding-bottom: 25px;
 }
 
 
