--- a/Rich-list node server/public/css/dashboard.css
+++ b/Rich-list node server/public/css/dashboard.css
@@ -5,11 +5,35 @@
 .currency-card {
     background-color: #ffffff;
     border-radius: 6px;
-    border-top: 7px solid #252a34;
-    box-shadow: 0px -6px 0px 0px #ff2e63;
+    border: 1px solid #d1d1d1;
+    /* border-top: 7px solid #252a34; */
+    /* box-shadow: 0px -6px 0px 0px #ff2e63; */
     text-align: center;
-    box-shadow: 0px 1px 6px -3px black;
+    /* box-shadow: 0px 1px 6px -3px black; */
     color: #252a34;
+    padding: 43px !important;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.currency-card:hover {
+    background-color: #252a34;
+    color: white;
+}
+.badge-primary {
+    background-color: #5ec289 !important;
+}
+
+#rank {
+    cursor: pointer;
+    transition: 1s;
+}
+#XRP {
+    cursor: pointer;
+    transition: 1s;
+}
+.blurred {
+    filter: blur(20px);
 }
 
 .accent-currency-card {
@@ -18,6 +42,7 @@
 }
 .address-card{
     color: white;
+    height: 100%;
     padding: 17px;
     border-radius: 8px;
     background-color: #252a34;
@@ -49,6 +74,14 @@
 /* Transaction-area */
 
 .transactions-col {
+    background: #ffffff;
+    border: 1px solid #ebebeb;
+    border-radius: 8px;
+    padding: 19px;
+    margin-top: 6px;
+}
+
+.holdings-col {
     background: #ffffff;
     border: 1px solid #ebebeb;
     border-radius: 8px;
@@ -91,7 +124,7 @@
     /* box-shadow: 2px 3px 10px -10px black; */
     font-size: 13px;
     border: 1px solid #e5e5e5;
-    transition: 0.3s;
+    transition: 0.1s;
     cursor: pointer;
     opacity: 1;
     /* animation-name: fade-in;
@@ -139,8 +172,6 @@
     /* border-radius: 5px; */
     padding: 9px;
 }
-
-
 
 /* Animations */
 
